# arc-icon-theme

./: .gitignore  CREDITS  Makefile.am  README.md  configure.ac
Arc/: index.theme
src/: render_icons.sh
